quite updates
